worked on issue #9

--- a/src/main/resources/de/konnekting/suite/Bundle_en_GB.properties
+++ b/src/main/resources/de/konnekting/suite/Bundle_en_GB.properties
@@ -73,3 +73,5 @@ GroupMonitorTableModel.tableheader.sender=Sender
 GroupMonitorTableModel.tableheader.telegram=Telegramm
 GroupMonitorTableModel.tableheader.groupaddress=Groupaddress
 GroupMonitorTableModel.tableheader.data=Data
+MainWindow.ConsoleMsg.KnxConnection=KNX Connection
+MainWindow.ConsoleMsg.operatingsystem=Operating system
