worked on issue #9

--- a/src/main/resources/de/konnekting/suite/Bundle_en_GB.properties
+++ b/src/main/resources/de/konnekting/suite/Bundle_en_GB.properties
@@ -73,5 +73,6 @@ GroupMonitorTableModel.tableheader.sender=Sender
 GroupMonitorTableModel.tableheader.telegram=Telegramm
 GroupMonitorTableModel.tableheader.groupaddress=Groupaddress
 GroupMonitorTableModel.tableheader.data=Data
-MainWindow.ConsoleMsg.KnxConnection=KNX Connection
-MainWindow.ConsoleMsg.operatingsystem=Operating system
+MainWindow.ConsoleMsg.knxConnection=KNX connection: 
+MainWindow.ConsoleMsg.operatingSystem=Operating system
+MainWindow.ConsoleMsg.detectedTelegram=KNX telegramm discovered. Connection seems to be okay.
