--- a/src/main/resources/de/konnekting/suite/Bundle_en.properties
+++ b/src/main/resources/de/konnekting/suite/Bundle_en.properties
@@ -22,7 +22,6 @@ DeviceEditor.deviceTab.TabConstraints.tabTitle=Device
 DeviceEditor.parameterTab.TabConstraints.tabTitle=Parameters
 DeviceInformationPanel.deviceInfoPanel.border.title=Device Data
 ParameterPanel.deviceDescriptionLabel.text=Device: 
-ProgramDialog.deviceNameLabel.text=Device
 ProgramDialog.cancelButton.text=Cancel
 SettingsDialog.ipInterfaceRadioButton.text=IP Interface
 SettingsDialog.ipRouterRadioButton.text=IP Router
@@ -41,7 +40,6 @@ DeviceInformationPanel.deviceRevisionLabel.text=Device-Rev.
 DeviceInformationPanel.manufacturerNameLabel.text=Manufacturer
 DeviceInformationPanel.deviceNameLabel.text=Device
 ParameterList.numberOfParamsLabel.text=Number of parameters: 
-ProgramDialog.deviceGettingProgrammedLabel.text=Device is programmed: 
 SettingsDialog.individualAddressLabel.text=Individual Address KNX
 SettingsDialog.changesApplyOnRestartLabel.text=!!! Changes requires application restart !!!
 SettingsDialog.ipAddressLabel.text=IP address
@@ -72,3 +70,9 @@ GroupMonitorTableModel.tableheader.data=Data
 MainWindow.ConsoleMsg.knxConnection=KNX connection: 
 MainWindow.ConsoleMsg.operatingSystem=Operating system
 MainWindow.ConsoleMsg.detectedTelegram=KNX telegramm discovered. Connection seems to be okay.
+ProgramDialog.programmingLabel.text=Programming: 
+ProgramDialog.ConsoleMsg.prefix=[Programming]
+ProgramDialog.ConsoleMsg.doneResult=Done! Duration: %d ms
+ProgramDialog.ConsoleMsg.progress=Progress:
+ProgramDialog.ConsoleMsg.errorOccured=An error occured.
+ProgramDialog.ConsoleMsg.cancelRequested=Cancel requested.
