--- a/src/main/resources/de/konnekting/suite/i18n/language.properties
+++ b/src/main/resources/de/konnekting/suite/i18n/language.properties
@@ -1,4 +1,3 @@
-
 Main.addDeviceButton.toolTipText=Add device
 Main.openProjectButton.toolTipText=Choose project folder
 Main.programmDataOnlyButton.toolTipText=Program comobjects and parameters only
@@ -76,3 +75,6 @@ ProgramDialog.ConsoleMsg.doneResult=Done! Duration: %d ms
 ProgramDialog.ConsoleMsg.progress=Progress:
 ProgramDialog.ConsoleMsg.errorOccured=An error occured.
 ProgramDialog.ConsoleMsg.cancelRequested=Cancel requested.
+SettingsDialog.multicastNetworkOn.text=on
+KnxAutoDiscoverProgress.progressLabel.text=Discovery in progress ...
+SettingsDialog.multicastNetworkDetectButton.text=auto-detect
