--- a/src/main/resources/de/konnekting/suite/i18n/language_de.properties
+++ b/src/main/resources/de/konnekting/suite/i18n/language_de.properties
@@ -75,3 +75,6 @@ ProgramDialog.ConsoleMsg.doneResult=Fertig! Dauer: %d ms
 ProgramDialog.ConsoleMsg.progress=Fortschritt:
 ProgramDialog.ConsoleMsg.errorOccured=Ein Fehler ist aufgetreten.
 ProgramDialog.ConsoleMsg.cancelRequested=Abbruch angefordert.
+KnxAutoDiscoverProgress.progressLabel.text=Erkennung l\u00e4uft ...
+SettingsDialog.multicastNetworkOn.text=auf
+SettingsDialog.multicastNetworkDetectButton.text=Suchen
