--- a/src/main/resources/de/konnekting/suite/i18n/language_de.properties
+++ b/src/main/resources/de/konnekting/suite/i18n/language_de.properties
@@ -78,3 +78,4 @@ ProgramDialog.ConsoleMsg.cancelRequested=Abbruch angefordert.
 KnxAutoDiscoverProgress.progressLabel.text=Erkennung l\u00e4uft ...
 SettingsDialog.multicastNetworkOn.text=auf
 SettingsDialog.multicastNetworkDetectButton.text=Suchen
+SettingsDialog.noconnectionLabel.text=Keine Verbindung zum KNX Bus.
