fixed label in settingsdialog

--- a/src/main/resources/de/konnekting/suite/i18n/language.properties
+++ b/src/main/resources/de/konnekting/suite/i18n/language.properties
@@ -79,3 +79,4 @@ SettingsDialog.multicastNetworkOn.text=on
 KnxAutoDiscoverProgress.progressLabel.text=Discovery in progress ...
 SettingsDialog.multicastNetworkDetectButton.text=auto-detect
 SettingsDialog.noconnectionLabel.text=No connection to KNX bus.
+SettingsDialog.offlineRadioButton.text=No connection
