Added project saver still need to work on project saving to speed up applikation

--- a/src/main/resources/de/konnekting/suite/i18n/language.properties
+++ b/src/main/resources/de/konnekting/suite/i18n/language.properties
@@ -80,3 +80,4 @@ KnxAutoDiscoverProgress.progressLabel.text=Discovery in progress ...
 SettingsDialog.multicastNetworkDetectButton.text=auto-detect
 SettingsDialog.noconnectionLabel.text=No connection to KNX bus.
 SettingsDialog.offlineRadioButton.text=No connection
+ProjectSaver.messageLabel.text=Saving project...
