--- a/src/main/resources/de/konnekting/suite/i18n/language_de.properties
+++ b/src/main/resources/de/konnekting/suite/i18n/language_de.properties
@@ -80,3 +80,4 @@ SettingsDialog.multicastNetworkOn.text=auf
 SettingsDialog.multicastNetworkDetectButton.text=Suchen
 SettingsDialog.noconnectionLabel.text=Keine Verbindung zum KNX Bus.
 SettingsDialog.offlineRadioButton.text=Keine Verbindung
+ProjectSaver.messageLabel.text=Speichere Projekt...
