+ setting can be applied during runtime + status panel now cleares after 10sek + auto discovery updated

--- a/src/main/resources/de/konnekting/suite/i18n/language.properties
+++ b/src/main/resources/de/konnekting/suite/i18n/language.properties
@@ -22,8 +22,6 @@ DeviceEditor.parameterTab.TabConstraints.tabTitle=Parameters
 DeviceInformationPanel.deviceInfoPanel.border.title=Device Data
 ParameterPanel.deviceDescriptionLabel.text=Device: 
 ProgramDialog.cancelButton.text=Cancel
-SettingsDialog.ipInterfaceRadioButton.text=IP Interface
-SettingsDialog.ipRouterRadioButton.text=IP Router
 SettingsDialog.saveButton.text=Apply
 SettingsDialog.knxPanel.TabConstraints.tabTitle=KNX
 SettingsDialog.askFolderCheckbox.text=Ask for project folder on startup?
@@ -40,7 +38,6 @@ DeviceInformationPanel.manufacturerNameLabel.text=Manufacturer
 DeviceInformationPanel.deviceNameLabel.text=Device
 ParameterList.numberOfParamsLabel.text=Number of parameters: 
 SettingsDialog.individualAddressLabel.text=Individual Address KNX
-SettingsDialog.changesApplyOnRestartLabel.text=!!! Changes requires application restart !!!
 SettingsDialog.ipAddressLabel.text=IP address
 SettingsDialog.tpuartinterfaceLabel.text=Interface
 SettingsDialog.multicastipLabel.text=Multicast IP
@@ -76,8 +73,10 @@ ProgramDialog.ConsoleMsg.progress=Progress:
 ProgramDialog.ConsoleMsg.errorOccured=An error occured.
 ProgramDialog.ConsoleMsg.cancelRequested=Cancel requested.
 SettingsDialog.multicastNetworkOn.text=on
-KnxAutoDiscoverProgress.progressLabel.text=Discovery in progress ...
+KnxAutoDiscoverProgress.progressLabel.text=Scanning network:
 SettingsDialog.multicastNetworkDetectButton.text=auto-detect
 SettingsDialog.noconnectionLabel.text=No connection to KNX bus.
 SettingsDialog.offlineRadioButton.text=No connection
 ProjectSaver.messageLabel.text=Saving project...
+SettingsDialog.ipTunnelingRadioButton.text=IP Interface
+SettingsDialog.ipRoutingRadioButton.text=IP Router
