--- a/src/main/resources/de/konnekting/suite/i18n/language_de.properties
+++ b/src/main/resources/de/konnekting/suite/i18n/language_de.properties
@@ -22,8 +22,6 @@ DeviceEditor.parameterTab.TabConstraints.tabTitle=Parameter
 DeviceInformationPanel.deviceInfoPanel.border.title=Ger\u00e4tedaten
 ParameterPanel.deviceDescriptionLabel.text=Ger\u00e4t: 
 ProgramDialog.cancelButton.text=Abbrechen
-SettingsDialog.ipInterfaceRadioButton.text=IP Schnittstelle
-SettingsDialog.ipRouterRadioButton.text=IP Router
 SettingsDialog.saveButton.text=\u00dcbernehmen
 SettingsDialog.knxPanel.TabConstraints.tabTitle=KNX
 SettingsDialog.askFolderCheckbox.text=Beim Start nach Projektordner fragen?
@@ -40,7 +38,6 @@ DeviceInformationPanel.manufacturerNameLabel.text=Hersteller
 DeviceInformationPanel.deviceNameLabel.text=Ger\u00e4t
 ParameterList.numberOfParamsLabel.text=Anzahl Parameter:
 SettingsDialog.individualAddressLabel.text=Physikalische Adresse KNX
-SettingsDialog.changesApplyOnRestartLabel.text=!!!\u00c4NDERUNGEN WERDEN ERST MIT EINEM NEUSTART DER SUITE WIRKSAM!!!
 SettingsDialog.ipAddressLabel.text=IP Addresse
 SettingsDialog.tpuartinterfaceLabel.text=Schnittstelle
 SettingsDialog.multicastipLabel.text=Multicast IP
@@ -75,9 +72,11 @@ ProgramDialog.ConsoleMsg.doneResult=Fertig! Dauer: %d ms
 ProgramDialog.ConsoleMsg.progress=Fortschritt:
 ProgramDialog.ConsoleMsg.errorOccured=Ein Fehler ist aufgetreten.
 ProgramDialog.ConsoleMsg.cancelRequested=Abbruch angefordert.
-KnxAutoDiscoverProgress.progressLabel.text=Erkennung l\u00e4uft ...
+KnxAutoDiscoverProgress.progressLabel.text=Untersuche Netzwerk:
 SettingsDialog.multicastNetworkOn.text=auf
 SettingsDialog.multicastNetworkDetectButton.text=Suchen
 SettingsDialog.noconnectionLabel.text=Keine Verbindung zum KNX Bus.
 SettingsDialog.offlineRadioButton.text=Keine Verbindung
 ProjectSaver.messageLabel.text=Speichere Projekt...
+SettingsDialog.ipTunnelingRadioButton.text=IP Schnittstelle
+SettingsDialog.ipRoutingRadioButton.text=IP Router
