--- a/src/main/resources/de/konnekting/suite/i18n/language.properties
+++ b/src/main/resources/de/konnekting/suite/i18n/language.properties
@@ -80,3 +80,7 @@ SettingsDialog.offlineRadioButton.text=No connection
 ProjectSaver.messageLabel.text=Saving project...
 SettingsDialog.ipTunnelingRadioButton.text=IP Interface
 SettingsDialog.ipRoutingRadioButton.text=IP Router
+MainWindow.connectKnx=Connect to KNX
+MainWindow.saveSettings=Saving settings
+DeviceList.task.openproject=Opening project '%s'
+DeviceList.onevent.adddevice=Device added: %s %s
