--- a/src/main/resources/de/konnekting/suite/i18n/language_de.properties
+++ b/src/main/resources/de/konnekting/suite/i18n/language_de.properties
@@ -80,3 +80,7 @@ SettingsDialog.offlineRadioButton.text=Keine Verbindung
 ProjectSaver.messageLabel.text=Speichere Projekt...
 SettingsDialog.ipTunnelingRadioButton.text=IP Schnittstelle
 SettingsDialog.ipRoutingRadioButton.text=IP Router
+MainWindow.connectKnx=Verbinde mit KNX
+MainWindow.saveSettings=Speichere Einstellungen
+DeviceList.task.openproject=\u00d6ffne Projekt '%s'
+DeviceList.onevent.adddevice=Ger\u00e4t hinzugef\u00fcgt: %s %s
