updated lang on knx search dialog

--- a/src/main/resources/de/konnekting/suite/i18n/language.properties
+++ b/src/main/resources/de/konnekting/suite/i18n/language.properties
@@ -84,3 +84,6 @@ MainWindow.connectKnx=Connect to KNX
 MainWindow.saveSettings=Saving settings
 DeviceList.task.openproject=Opening project '%s'
 DeviceList.onevent.adddevice=Device added: %s %s
+SettingsDialog.messagedialog.nothingfound=No interface found.
+SettingsDialog.messagedialog.title.interfacesfound=Interface found
+SettingsDialog.messagedialog.message.chooseinterface=Choose your interface
