--- a/src/main/resources/de/konnekting/suite/i18n/language_de.properties
+++ b/src/main/resources/de/konnekting/suite/i18n/language_de.properties
@@ -84,3 +84,6 @@ MainWindow.connectKnx=Verbinde mit KNX
 MainWindow.saveSettings=Speichere Einstellungen
 DeviceList.task.openproject=\u00d6ffne Projekt '%s'
 DeviceList.onevent.adddevice=Ger\u00e4t hinzugef\u00fcgt: %s %s
+SettingsDialog.messagedialog.nothingfound=Kein Interface gefunden.
+SettingsDialog.messagedialog.title.interfacesfound=Schnittstelle gefunden
+SettingsDialog.messagedialog.message.chooseinterface=W\u00e4hle eine Schnittstelle aus
