#11 setting more than one GA per ComObj is now possible.

--- a/src/main/resources/de/konnekting/suite/i18n/language.properties
+++ b/src/main/resources/de/konnekting/suite/i18n/language.properties
@@ -87,3 +87,8 @@ DeviceList.onevent.adddevice=Device added: %s %s
 SettingsDialog.messagedialog.nothingfound=No interface found.
 SettingsDialog.messagedialog.title.interfacesfound=Interface found
 SettingsDialog.messagedialog.message.chooseinterface=Choose your interface
+GroupAddressInputDialog.borderTitle.addGA=Add groupaddress
+GroupAddressInputDialog.borderTitle.associatedGA=Associated grupaddresses
+GroupAddressInputDialog.button.associate=Associate
+GroupAddressInputDialog.button.remove=Remove
+GroupAddressInputDialog.button.close=Done
