added ga lookup and autocomplete

--- a/src/main/resources/de/konnekting/suite/i18n/language.properties
+++ b/src/main/resources/de/konnekting/suite/i18n/language.properties
@@ -92,3 +92,6 @@ GroupAddressInputDialog.borderTitle.associatedGA=Associated grupaddresses
 GroupAddressInputDialog.button.associate=Associate
 GroupAddressInputDialog.button.remove=Remove
 GroupAddressInputDialog.button.close=Done
+GroupAddressInputDialog.button.openList=...
+GroupAddressListDialog.borderTitle.availableGA=Available addresses
+GroupAddressListDialog.button.select=Select
