--- a/src/main/resources/de/konnekting/suite/i18n/language_de.properties
+++ b/src/main/resources/de/konnekting/suite/i18n/language_de.properties
@@ -92,3 +92,4 @@ GroupAddressInputDialog.borderTitle.associatedGA=Verbundene Gruppenadressen
 GroupAddressInputDialog.button.associate=Verbinden
 GroupAddressInputDialog.button.remove=Entfernen
 GroupAddressInputDialog.button.close=Fertig
+GroupAddressInputDialog.button.openList=...
