first steps towards working device programming, working on partial prog mode

--- a/src/main/resources/de/konnekting/suite/i18n/language.properties
+++ b/src/main/resources/de/konnekting/suite/i18n/language.properties
@@ -1,15 +1,11 @@
 Main.addDeviceButton.toolTipText=Add device
 Main.openProjectButton.toolTipText=Choose project folder
-Main.programmDataOnlyButton.toolTipText=Program comobjects and parameters only
-Main.programmAllButton.toolTipText=Program all
 Main.removeDeviceButton.toolTipText=Remove device
 MainWindow.Title=KONNEKTING Suite
 SettingsFrame.Title=Settings
 Main.groupmonitorButton.toolTipText=Groupmonitor
 Main.settingsButton.toolTipText=open settings
 Main.exitButton.toolTipText=exit suite
-Main.programParamOnlyButton.toolTipText=program parameters only
-Main.programComObjOnlyButton.toolTipText=program comobjects only
 Main.aboutButton.toolTipText=About
 SaveDeviceAsDialog.cancelButton.text=Cancel
 SaveDeviceAsDialog.addDeviceButton.text=Add device
@@ -95,3 +91,6 @@ GroupAddressInputDialog.button.close=Done
 GroupAddressInputDialog.button.openList=...
 GroupAddressListDialog.borderTitle.availableGA=Available addresses
 GroupAddressListDialog.button.select=Select
+Main.programmPartial.toolTipText=Program partially: only unprogrammed changes
+Main.programAppData.toolTipText=Programm Application Data: only Communication Objects and Parameters
+Main.programmAll.toolTipText=Program all: Physical Address and Application Data
