--- a/src/main/resources/de/konnekting/suite/i18n/language_de.properties
+++ b/src/main/resources/de/konnekting/suite/i18n/language_de.properties
@@ -1,15 +1,11 @@
 Main.addDeviceButton.toolTipText=Ger\u00e4t hinzuf\u00fcgen
 Main.openProjectButton.toolTipText=Projektordner w\u00e4hlen
-Main.programmDataOnlyButton.toolTipText=Programmieren nur KO und Parameter
-Main.programmAllButton.toolTipText=Alles Programmieren
 Main.removeDeviceButton.toolTipText=Ger\u00e4t entfernen
 MainWindow.Title=KONNEKTING Suite
 SettingsFrame.Title=Einstellungen
 Main.groupmonitorButton.toolTipText=Gruppenmonitor
 Main.settingsButton.toolTipText=Einstellungen \u00f6ffnen
 Main.exitButton.toolTipText=Suite beenden
-Main.programParamOnlyButton.toolTipText=Programmieren nur Parameter
-Main.programComObjOnlyButton.toolTipText=Programmieren nur KO
 Main.aboutButton.toolTipText=\u00dcber
 SaveDeviceAsDialog.cancelButton.text=Abbrechen
 SaveDeviceAsDialog.addDeviceButton.text=Ger\u00e4t anlegen
@@ -93,3 +89,6 @@ GroupAddressInputDialog.button.associate=Verbinden
 GroupAddressInputDialog.button.remove=Entfernen
 GroupAddressInputDialog.button.close=Fertig
 GroupAddressInputDialog.button.openList=...
+Main.programmPartial.toolTipText=Partiell programmieren: nur unprogrammierte \u00c4nderungen
+Main.programAppData.toolTipText=Applikationsdaten progammieren: Nur Kommunikationsobjekte und Parameter
+Main.programmAll.toolTipText=Alles programmieren: Physikalische Adresse und Applikationsdaten
