--- a/src/main/resources/de/konnekting/suite/i18n/language_de.properties
+++ b/src/main/resources/de/konnekting/suite/i18n/language_de.properties
@@ -92,3 +92,5 @@ GroupAddressInputDialog.button.openList=...
 Main.programmPartial.toolTipText=Partiell programmieren: nur unprogrammierte \u00c4nderungen
 Main.programAppData.toolTipText=Applikationsdaten progammieren: Nur Kommunikationsobjekte und Parameter
 Main.programmAll.toolTipText=Alles programmieren: Physikalische Adresse und Applikationsdaten
+GroupAddressListDialog.borderTitle.availableGA=Verf\u00fcgbare Adressen
+GroupAddressListDialog.button.select=Ausw\u00e4hlen
