--- a/src/main/resources/de/konnekting/suite/i18n/language.properties
+++ b/src/main/resources/de/konnekting/suite/i18n/language.properties
@@ -91,6 +91,6 @@ GroupAddressInputDialog.button.close=Done
 GroupAddressInputDialog.button.openList=...
 GroupAddressListDialog.borderTitle.availableGA=Available addresses
 GroupAddressListDialog.button.select=Select
-Main.programmPartial.toolTipText=Program partially: only unprogrammed changes
+Main.programmPartial.toolTipText=Program partially: only unprogrammed CommObj & Parameter changes
 Main.programAppData.toolTipText=Programm Application Data: only Communication Objects and Parameters
 Main.programmAll.toolTipText=Program all: Physical Address and Application Data
