--- a/src/main/resources/de/konnekting/suite/i18n/language_de.properties
+++ b/src/main/resources/de/konnekting/suite/i18n/language_de.properties
@@ -89,7 +89,7 @@ GroupAddressInputDialog.button.associate=Verbinden
 GroupAddressInputDialog.button.remove=Entfernen
 GroupAddressInputDialog.button.close=Fertig
 GroupAddressInputDialog.button.openList=...
-Main.programmPartial.toolTipText=Partiell programmieren: nur unprogrammierte \u00c4nderungen
+Main.programmPartial.toolTipText=Partiell programmieren: nur unprogrammierte KO & Parameter \u00c4nderungen
 Main.programAppData.toolTipText=Applikationsdaten progammieren: Nur Kommunikationsobjekte und Parameter
 Main.programmAll.toolTipText=Alles programmieren: Physikalische Adresse und Applikationsdaten
 GroupAddressListDialog.borderTitle.availableGA=Verf\u00fcgbare Adressen
