--- a/src/main/resources/de/konnekting/suite/i18n/language.properties
+++ b/src/main/resources/de/konnekting/suite/i18n/language.properties
@@ -94,3 +94,5 @@ GroupAddressListDialog.button.select=Select
 Main.programmPartial.toolTipText=Program partially: only unprogrammed CommObj & Parameter changes
 Main.programAppData.toolTipText=Programm Application Data: only Communication Objects and Parameters
 Main.programmAll.toolTipText=Program all: Physical Address and Application Data
+GroupAddressInputDialog.button.markall=Mark all
+GroupAddressInputDialog.button.marknone=Mark none
