--- a/src/main/resources/de/konnekting/suite/i18n/language_de.properties
+++ b/src/main/resources/de/konnekting/suite/i18n/language_de.properties
@@ -94,3 +94,5 @@ Main.programAppData.toolTipText=Applikationsdaten progammieren: Nur Kommunikatio
 Main.programmAll.toolTipText=Alles programmieren: Physikalische Adresse und Applikationsdaten
 GroupAddressListDialog.borderTitle.availableGA=Verf\u00fcgbare Adressen
 GroupAddressListDialog.button.select=Ausw\u00e4hlen
+GroupAddressInputDialog.button.markall=Alles markieren
+GroupAddressInputDialog.button.marknone=Markierung aufheben
